[package]
name = "bedrock-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1.1.0"
reqwest = { version = "0.12.5", features = ["gzip"] }
scraper = "0.20.0"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
regex = "1.10.6"
version-compare = "0.2.0"
clap = { version = "4.5.16", features = ["derive"] }
thiserror = "1.0.63"

